--- a/chp5.ipynb
+++ b/chp5.ipynb
@@ -270,7 +270,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -281,7 +283,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -292,7 +296,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -322,7 +328,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -352,7 +360,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -382,7 +392,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -412,7 +424,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -437,6 +451,422 @@
    ],
    "source": [
     "t.test(心理学テスト, mu=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "統計テスト1 <- c(6,10,6,10,5,3,5,9,3,3,11,6,11,9,7,5,8,7,7,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "統計テスト2 <- c(10,13,8,15,8,6,9,10,7,3,18,14,18,11,12,5,7,12,7,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "標本相関 <- cor(統計テスト1,統計テスト2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.749658964824245"
+      ],
+      "text/latex": [
+       "0.749658964824245"
+      ],
+      "text/markdown": [
+       "0.749658964824245"
+      ],
+      "text/plain": [
+       "[1] 0.749659"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "標本相関"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "サンプルサイズ <- length(統計テスト1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t分子 <- 標本相関*sqrt(サンプルサイズ-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    " t分母 <- sqrt(1-標本相関^2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t統計量 <- t分子/t分母"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "4.80570675334372"
+      ],
+      "text/latex": [
+       "4.80570675334372"
+      ],
+      "text/markdown": [
+       "4.80570675334372"
+      ],
+      "text/plain": [
+       "[1] 4.805707"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "t統計量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "-2.10092204024104"
+      ],
+      "text/latex": [
+       "-2.10092204024104"
+      ],
+      "text/markdown": [
+       "-2.10092204024104"
+      ],
+      "text/plain": [
+       "[1] -2.100922"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "qt(0.025, 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2.10092204024104"
+      ],
+      "text/latex": [
+       "2.10092204024104"
+      ],
+      "text/markdown": [
+       "2.10092204024104"
+      ],
+      "text/plain": [
+       "[1] 2.100922"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "qt(0.975, 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's product-moment correlation\n",
+       "\n",
+       "data:  統計テスト1 and 統計テスト2\n",
+       "t = 4.8057, df = 18, p-value = 0.0001416\n",
+       "alternative hypothesis: true correlation is not equal to 0\n",
+       "95 percent confidence interval:\n",
+       " 0.4596086 0.8952048\n",
+       "sample estimates:\n",
+       "     cor \n",
+       "0.749659 \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cor.test(統計テスト1,統計テスト2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "期待度数イチイチ <- 12*14/20\n",
+    "期待度数ニイチ <- 12*6/20\n",
+    "期待度数イチニ <- 8*14/20\n",
+    "期待度数ニニ <- 8*6/20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "期待度数 <- c(期待度数イチイチ,期待度数ニイチ,期待度数イチニ,期待度数ニニ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "観測度数 <- c(10,2,4,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "カイ二乗要素 <- (観測度数-期待度数)^2/期待度数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "カイ二乗 <- sum(カイ二乗要素)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2.53968253968254"
+      ],
+      "text/latex": [
+       "2.53968253968254"
+      ],
+      "text/markdown": [
+       "2.53968253968254"
+      ],
+      "text/plain": [
+       "[1] 2.539683"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "カイ二乗"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "3.84145882069412"
+      ],
+      "text/latex": [
+       "3.84145882069412"
+      ],
+      "text/markdown": [
+       "3.84145882069412"
+      ],
+      "text/plain": [
+       "[1] 3.841459"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "qchisq(0.95,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "数学 <- c(\"嫌い\",\"嫌い\",\"好き\",\"好き\",\"嫌い\",\"嫌い\",\"嫌い\",\"嫌い\",\"嫌い\",\n",
+    "\"好き\",\"好き\",\"嫌い\",\"好き\",\"嫌い\",\"嫌い\",\"好き\",\"嫌い\",\"嫌い\",\"嫌い\",\"嫌い\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "統計 <- c(\"好き\",\"好き\",\"好き\",\"好き\",\"嫌い\",\"嫌い\",\"嫌い\",\"嫌い\",\"嫌い\",\n",
+    "\"嫌い\",\"好き\",\"好き\",\"好き\",\"嫌い\",\"好き\",\"嫌い\",\"嫌い\",\"嫌い\",\"嫌い\",\"嫌い\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "クロス集計表 <- table(数学,統計)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in chisq.test(クロス集計表, correct = FALSE):\n",
+      "“Chi-squared approximation may be incorrect”"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "\tPearson's Chi-squared test\n",
+       "\n",
+       "data:  クロス集計表\n",
+       "X-squared = 2.5397, df = 1, p-value = 0.111\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "chisq.test(クロス集計表,correct=FALSE)"
    ]
   },
   {
